<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTituloSuperior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#009688"
        android:gravity="center|start"
        android:text="AdivinaNúmeroTexto"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Adivina el número"
        android:textColor="#757070"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloSuperior" />

    <TextView
        android:id="@+id/tvIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="nº intentos: "
        android:textColor="#FAE91EA5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvMensajeResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#757070"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV6"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.504788" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <Button
        android:id="@+id/b1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_1"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/b2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_2"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_3"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/b4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_4"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/b5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_5"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV6"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <Button
        android:id="@+id/b6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_6"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <Button
        android:id="@+id/b7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_7"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <Button
        android:id="@+id/b8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_8"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV3"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <Button
        android:id="@+id/b9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:text="@string/numero_9"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV4"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <Button
        android:id="@+id/b10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="#CFCFCF"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/numero_10"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV6"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <TextView
        android:id="@+id/imagen"
        android:layout_width="123dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="¿?"
        android:textColor="#009688"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvMensajeResultado"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV6"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/tvIntentos" />

</androidx.constraintlayout.widget.ConstraintLayout>